lb01_control/scripts/*eshell*
Welcome to the Emacs shell

~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ ls
#Servo_Example.py#  Adafruit_PWM_Servo_Driver.py
Adafruit_I2C.py     Adafruit_PWM_Servo_Driver.pyc
Adafruit_I2C.pyc    Servo_Example.py
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ ls
#Servo_Example.py#  Adafruit_PWM_Servo_Driver.py
Adafruit_I2C.py     Adafruit_PWM_Servo_Driver.pyc
Adafruit_I2C.pyc    Servo_Example.py
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ python Servo_Example.py 
Traceback (most recent call last):
  File "Servo_Example.py", line 3, in <module>
    from Adafruit_PWM_Servo_Driver import PWM
  File "/home/ubuntu/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver/Adafruit_PWM_Servo_Driver.py", line 11, in <module>
    class PWM :
  File "/home/ubuntu/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver/Adafruit_PWM_Servo_Driver.py", line 35, in PWM
    general_call_i2c = Adafruit_I2C(0x00)
  File "/home/ubuntu/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver/Adafruit_I2C.py", line 43, in __init__
    self.bus = smbus.SMBus(busnum if busnum >= 0 else Adafruit_I2C.getPiI2CBusNumber())
IOError: [Errno 13] Permission denied
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
Traceback (most recent call last):
  File "Servo_Example.py", line 36, in <module>
    pwm.setPWM(0, 0, (servoMin+servoMax)/2.)
  File "/home/ubuntu/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver/Adafruit_PWM_Servo_Driver.py", line 84, in setPWM
    self.i2c.write8(self.__LED0_OFF_L+4*channel, off & 0xFF)
TypeError: unsupported operand type(s) for &: 'float' and 'int'
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 

/sudo:root@localhost:/home/ubuntu/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ 
/sudo:root@localhost:/home/ubuntu/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
Process has died
/sudo:root@localhost:/home/ubuntu/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ 
/sudo:root@localhost:/home/ubuntu/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ 
/sudo:root@localhost:/home/ubuntu/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
Args out of range: 48, 93
/sudo:root@localhost:/home/ubuntu/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ Process python not running
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ sudo python Servo_Example.py 
~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver $ cd
~ $ cd workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts/
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ ls
servo_driver_node.py
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ emacs servo_driver_node.py 
emacs: Terminal type "dumb" is not powerful enough to run Emacs.
It lacks the ability to position the cursor.
If that is not the actual type of terminal you have,
use the Bourne shell command `TERM=... export TERM' (C-shell:
`setenv TERM ...') to specify the correct type.  It may be necessary
to do `unset TERMINFO' (C-shell: `unsetenv TERMINFO') as well.
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ cd ../
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control $ cp ~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver/Adafruit_PWM_Servo_Driver.py ./
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control $ ls
Adafruit_PWM_Servo_Driver.py  CMakeLists.txt  include  package.xml  scripts
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control $ mv Adafruit_PWM_Servo_Driver.py scripts/
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control $ cd scripts/
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ ls
Adafruit_PWM_Servo_Driver.py  servo_driver_node.py
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ sudo python servo_driver_node.py 
  File "servo_driver_node.py", line 34
    if ratio < 0
               ^
SyntaxError: invalid syntax
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ sudo python servo_driver_node.py 
  File "servo_driver_node.py", line 34
    if ratio<0
             ^
SyntaxError: invalid syntax
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ sudo python servo_driver_node.py 
  File "servo_driver_node.py", line 35
    return speed = (servoMiddle * (1 + racio)) + 10
         ^
IndentationError: expected an indented block
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ sudo python servo_driver_node.py 
  File "servo_driver_node.py", line 38
    return speed = (servoMax * ratio) + servoMiddle
                 ^
SyntaxError: invalid syntax
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ sudo python servo_driver_node.py 
Traceback (most recent call last):
  File "servo_driver_node.py", line 3, in <module>
    from Adafruit_PWM_Servo_Driver import PWM
  File "/home/ubuntu/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts/Adafruit_PWM_Servo_Driver.py", line 5, in <module>
    from Adafruit_I2C import Adafruit_I2C
ImportError: No module named Adafruit_I2C
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ ls ~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver/
#Servo_Example.py#  Adafruit_I2C.py  Adafruit_I2C.pyc  Adafruit_PWM_Servo_Driver.py  Adafruit_PWM_Servo_Driver.pyc  Servo_Example.py
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ cp -R ~/Adafruit-Raspberry-Pi-Python-Code/Adafruit_PWM_Servo_Driver/* ./
Opening output file: permission denied, /home/ubuntu/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts/Adafruit_PWM_Servo_Driver.pyc
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ ls
#Servo_Example.py#  Adafruit_I2C.py  Adafruit_I2C.pyc  Adafruit_PWM_Servo_Driver.py  Adafruit_PWM_Servo_Driver.pyc  Servo_Example.py  servo_driver_node.py
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ rm servo_driver_node.py 
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ rm \#Servo_Example.py\# 
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ ls
Adafruit_I2C.py  Adafruit_I2C.pyc  Adafruit_PWM_Servo_Driver.py  Adafruit_PWM_Servo_Driver.pyc  Servo_Example.py
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ sudo python servo_driver_node.py 
/usr/bin/python: can't open file 'servo_driver_node.py': [Errno 2] No such file or directory
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ ls
Adafruit_I2C.py  Adafruit_I2C.pyc  Adafruit_PWM_Servo_Driver.py  Adafruit_PWM_Servo_Driver.pyc  Servo_Example.py
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ ls
*eshell*  Adafruit_I2C.py  Adafruit_I2C.pyc  Adafruit_PWM_Servo_Driver.py  Adafruit_PWM_Servo_Driver.pyc  Servo_Example.py
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ ls
*eshell*  Adafruit_I2C.py  Adafruit_I2C.pyc  Adafruit_PWM_Servo_Driver.py  Adafruit_PWM_Servo_Driver.pyc  Servo_Example.py  servo_driver_node.py
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ rm \*eshell\* 
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ sudo chmod +x servo_driver_node.py 
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ sudo python servo_driver_node.py 
Traceback (most recent call last):
  File "servo_driver_node.py", line 49, in <module>
    speed = defSpeed(-1)
  File "servo_driver_node.py", line 35, in defSpeed
    speed = (servoMiddle * (1 + racio)) + 10
NameError: global name 'racio' is not defined
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ sudo python servo_driver_node.py 
sudo python servo_driver_node.py 
~/workspace/ROS/lb01_ws/src/lb01_pkgs/lb01_control/scripts $ ls